# clob

./: .gitignore  .windsurfrules  Cargo.toml  README.md  matching_engine_implementation_summary.md  test_matching_engine.rs  test_matching_engine_implementation.rs
analysis/: COMPREHENSIVE_CLOB_ANALYSIS.md  CRITICAL_IMPROVEMENTS.md  README.md
deployment/: Dockerfile  docker-compose.yml
docs/: Amortized Folding and Batch Operations.md  Implement SP1 zkVM Backend impl.md  Proof Anchoring and Verification System.md  adverse_selection_protection.md  ethrex L1 Client Integration.md  hawkes_parameter_estimation.md  market_impact_integration.md  order_flow_hawkes_modeling.md  trading_zkvm_integration.md
documentation of orderbook impl/: 01_project_overview.md  02_implemented_features.md  03_partially_implemented_features.md  04_unimplemented_features.md  05_core_components.md  06_dependencies.md  Central Limit Order Book Engine.md  Implement market data generation.md  Infrastructure and Monitoring.md  Multi-Asset and Cross-Venue Support.md  SDE solvers for price dynamics.md  backtesting framework.md  based sequencer.md  core_order_book_implementation.md  mathematicla framework impl.md  parameter_optimization_implementation.md  performance_metrics_implementation.md  quoting stratergy impl docs.md  rough volatility model.md
examples/: advanced_inventory_management_demo.rs  advanced_usage.rs  adverse_selection_protection_demo.rs  auto_scaling_demo.rs  backtesting_framework_demo.rs  basic_usage.rs  clob_engine_demo.rs  core_order_book_demo.rs  cross_venue_fx_demo.rs  dynamic_parameter_adjustment_demo.rs  ethrex_l1_integration_demo.rs  hawkes_parameter_estimation_demo.rs  hf_quoting_strategy_demo.rs  l1_state_sync_demo.rs  market_data_demo.rs  market_impact_integration_demo.rs  market_making_demo.rs  microstructure_analytics_demo.rs  model_comparison.rs  order_flow_hawkes_demo.rs  order_management_demo.rs  parameter_optimization_demo.rs  performance_metrics_demo.rs  rough_volatility_demo.rs  sde_solvers_demo.rs  simd_validation_demo.rs  trading_zkvm_integration_demo.rs  twap_execution_demo.rs  zisk_integration_demo.rs  zisk_test_program.rs
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  optimization.rs  utils.rs  validation.rs
tests/: auto_scaling_integration_test.rs  automated_benchmark_suite.rs  convergence_testing.rs  end_to_end_integration_testing.rs  infrastructure_integration_test.rs  integration and testiong validation.md  integration_testing_suite.rs  integration_tests.rs  lob_rough_vol_test.rs  lock_free_integration_test.rs  market_data_integration_test.rs  market_making_integration_test.rs  math_tests.rs  mathematical_model_validation.rs  numa_integration_test.rs  numerical_accuracy_validation.rs  order_management_integration_test.rs  parameter_optimization_integration_test.rs  performance_metrics_integration_test.rs  performance_regression_testing.rs  rollup_integration_test.rs  (+8 more)
(+304 files in other folders)
