[package]
name = "hf-quoting-liquidity-clob"
version = "0.1.0"
edition = "2021"

[features]
default = ["zisk"]
gpu = ["ocl"]
zisk = []
# sp1 = ["sp1-sdk", "sp1-core"]
# succinct-network = ["sp1", "reqwest", "tokio"]

[dependencies]
# Core mathematical libraries
nalgebra = "0.32.3"
ndarray = { version = "0.15", features = ["approx"] }
num-complex = "0.4.4"
num-traits = { version = "0.2.17", features = ["std"] }
statrs = "0.16.0"
rustfft = "6.1.0"

# Concurrency and performance
parking_lot = { version = "0.12.1", features = ["serde"] }
rayon = "1.8.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"

# Random number generation
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
ndarray-rand = "0.14.0"

# Data structures and caching
lru = "0.10.0"
dashmap = "5.5"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.7"
bincode = "1.3"

# Fixed-point arithmetic for zkVM compatibility
rust_decimal = { version = "1.33.1", features = ["serde"] }
rust_decimal_macros = "1.33.1"

# Logging and monitoring
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
thiserror = "1.0.50"
anyhow = "1.0"

# Cryptography and hashing
sha2 = "0.10"
blake3 = "1.5"
merkletree = "0.23"
hex = "0.4"
hmac = "0.12"
merlin = "3.0"

# Advanced cryptography for zkVM
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-poly-commit = "0.4"
ark-bls12-381 = "0.4"
ark-serialize = "0.4"

# Post-quantum cryptography
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"

# Network and HTTP
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.10"
prost = "0.12"
socket2 = "0.5"
bytes = "1.5"
regex = "1.10"

# Data compression
zstd = "0.13"
lz4_flex = "0.11"
brotli = "3.4"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# System information
num_cpus = "1.16"

# CSV processing for backtesting
csv = "1.3.0"
approx = "0.5.1"

# zkVM dependencies (commented out for now)
# ZisK zkVM support
# zisk-sdk = { git = "https://github.com/0xPolygonHermez/zisk", optional = true }

# SP1 and Succinct Network support
# sp1-sdk = { git = "https://github.com/succinctlabs/sp1", optional = true }
# sp1-core = { git = "https://github.com/succinctlabs/sp1", optional = true }

# GPU support
ocl = { version = "0.19", optional = true }

# Development dependencies
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"



[build-dependencies]
tonic-build = "0.10"
